--- a/index.html
+++ b/index.html
@@ -37,25 +37,6 @@
     <div class="w-full h-full bg-gray-800 absolute flex flex-row justify-center items-center">
         <div class="bg-gray-300 m-auto shadow-lg p-5 rounded w-1/4 h-auto mwh">
             <div class="flex flex-col justify-start w-full h-full items-center">
-                <!--TEXT-->
-                <div class="flex flex-row items-center h-14 rounded border-gray-900 bg-gray-800 border-1 text-white mb-2 w-full">
-                    <a class="flex-2 p-2 block flex flex-row items-center justify-center hover:bg-gray-700 h-full" href="https://github.com/zxing/zxing/wiki/Barcode-Contents" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                             aria-hidden="true" role="img" width="1em" height="1em"
-                            preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" style="width: 1em !important; height: 1em !important;">
-                            <g fill="none">
-                                <path
-                                    d="M13 22h-3v-3h3v3zm0-5h-3v-.007c0-1.65 0-3.075.672-4.073a6.304 6.304 0 0 1 1.913-1.62c.334-.214.649-.417.914-.628a3.712 3.712 0 0 0 1.332-3.824A3.033 3.033 0 0 0 9 8H6a6 6 0 0 1 6-6a6.04 6.04 0 0 1 5.434 3.366a6.017 6.017 0 0 1-.934 6.3c-.453.502-.96.95-1.514 1.337a7.248 7.248 0 0 0-1.316 1.167A4.23 4.23 0 0 0 13 17z"
-                                    fill="currentColor" />
-                            </g>
-                        </svg>
-                    </a>
-                    <input type="text" placeholder="Content"
-                        class="h-full pr-4 pl-1 flex-1 text-current bg-transparent focus:outline-none" id="linkBox"
-                        value="https://google.com">
-                    <button class="h-full flex-2 pr-2 pl-2 border-l-gray-900 border-l-1 hover:bg-gray-700"
-                        id="genBtn">Generate</button>
-                </div>
                 <!--WIFI-->
                 <div class="flex flex-row items-center h-14 pl-1 rounded border-gray-900 bg-gray-800 border-1 text-white mb-2 w-full max-w-full">
                     <input type="text" placeholder="Wifi SSID"
@@ -69,20 +50,7 @@
                         id="genWifiBtn">Generate</button>
                 </div>
                 <div id="qrcode" class="m-2"></div>
-                <!-- download links -->
-                <div>
-                    <a href="#" id="dlpng" class="mr-2 text-blue">PNG</a>
-
-                    <select id="imgSize" name="imgSize" class="mt-2 rounded-md border-0 py-1.5 pl-3 pr-10 text-gray-900 ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6 inline">
-                        <option value="256" selected>256px</option>
-                        <option value="512">512px</option>
-                        <option value="1024">1024px</option>
-                        <option value="2048">2048px</option>
-                      </select>
-
-                    <a href="#" id="dlsvg" class="ml-2">SVG</a>
-                </div>
-
+                <a href="https://github.com/nkdicu/qrcode-generator" target="_blank" class="text-blue-300 hover:text-blue-500 ml-2">Source Code</a>
                 <canvas id="canv" style="display: none" width="512" height="512" />
             </div>
         </div>
@@ -100,23 +68,9 @@
                 content: val,
                 container: 'svg-viewbox',
                 join: true,
-                width: size.value,
-                height: size.value
+                width: 1024,
+                height: 1024
             }).svg()
-        }
-
-        function genPng(val) {
-            const canvas = document.getElementById('canv')
-            canvas.width = size.value
-            canvas.height = size.value
-
-            const ctx = canvas.getContext('2d')
-            const svg = genSvg(val)
-
-            const rend = Canvg.fromString(ctx, svg)
-            rend.start()
-
-            return canvas.toDataURL('img/png')
         }
 
         // Wifi QR Code
@@ -127,63 +81,21 @@
             const params = new Proxy(new URLSearchParams(window.location.search), {
                 get: (searchParams, prop) => searchParams.get(prop),
             });
-            
-            let btn = document.getElementById("genBtn")
-            let link = document.getElementById("linkBox")
+
             let qr = document.getElementById("qrcode");
 
             let genWifiBtn = document.getElementById("genWifiBtn")
             let ssidBox = document.getElementById("ssidBox")
             let pwdBox = document.getElementById("pwdBox")
 
-            // Standard QR
-            btn.onclick = () => {
-                qr.innerHTML = genSvg(link.value)
-                lastQuery = link.value
-            }
-
             // Wifi QR
             genWifiBtn.onclick = () => {
                 const ssid = ssidBox.value
                 const pwd = pwdBox.value
 
-                const wifi = `WIFI:S:${ssid};H:true;T:WPA2;P:${pwd};;`
+                const wifi = `{"p":"${pwd}","s":"${ssid}"}`
                 qr.innerHTML = genSvg(wifi)
                 lastQuery = wifi
-            }
-
-            const qlink = params.link
-            if(qlink && qlink.trim() !== '') {
-                link.value = qlink
-
-                qr.innerHTML = genSvg(qlink)
-                lastQuery = qlink
-            }
-            else
-                qr.innerHTML = genSvg('https://google.com')
-            
-            // Download
-            var dlPng = document.getElementById('dlpng')
-            var dlSvg = document.getElementById('dlsvg')
-
-            dlPng.onclick = () => {
-                var link = document.createElement('a')
-
-                link.download = `${encodeURI(lastQuery)}.png`
-                link.href = genPng(lastQuery)
-
-                link.click()
-            }
-
-            dlSvg.onclick = () => {
-                const svgBlob = new Blob([genSvg(lastQuery)], {type:"image/svg+xml;charset=utf-8"})
-                const svgUrl = URL.createObjectURL(svgBlob)
-
-                let link = document.createElement('a')
-                link.download = `${encodeURI(lastQuery)}.svg`
-                link.href = svgUrl
-
-                link.click()
             }
         }
     </script>
