--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <button class="h-full pl-2 text-right pr-2 border-l-gray-900 border-l-1 hover:bg-gray-700 rounded-r-md"
                         id="genWifiBtn">Generate</button>
                 </div>
-                <div id="qrcode" class="m-2"></div>
+                <div id="qrcode" class="m-auto"></div>
                 <a href="https://github.com/nkdicu/qrcode-generator" target="_blank" class="text-blue-300 hover:text-blue-500 ml-2">Source Code</a>
                 <canvas id="canv" style="display: none" width="512" height="512" />
             </div>
@@ -59,8 +59,6 @@
     <script src="lib/qrcode.min.js"></script>
     <script type="module">
         import { Canvg } from 'https://cdn.skypack.dev/canvg@^4.0.0'
-        let lastQuery = 'https://google.com'
-
         const size = document.getElementById('imgSize')
 
         function genSvg(val) {
@@ -69,7 +67,9 @@
                 container: 'svg-viewbox',
                 join: true,
                 width: 1024,
-                height: 1024
+                height: 1024,
+                ecl: "L",
+                swap: true
             }).svg()
         }
 
@@ -95,7 +95,6 @@
 
                 const wifi = `{"p":"${pwd}","s":"${ssid}"}`
                 qr.innerHTML = genSvg(wifi)
-                lastQuery = wifi
             }
         }
     </script>
